syntax="proto3";
package pb;
import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
option go_package = "github.com/vietquan-37/auth-service/pkg/pb";
message CreateUserRequest{
    string user_name=1[(buf.validate.field).string.email = true];
    string password=2[(buf.validate.field).string.min_len = 3 ,(buf.validate.field).string.max_len = 16];
    string phone_number=3[(buf.validate.field).string.pattern = "^\\+?[0-9]{10,11}$"];
}
message UserResponse{
    string user_name=1;
    string phone_number=2;
    string role=3;
    google.protobuf.Timestamp create_at=4;
}
message GetOneUserRequest{
    int32 id=1;
}

message LoginRequest{
    string user_name=1[(buf.validate.field).string.email = true];
    string password=2[(buf.validate.field).string.min_len = 3 ,(buf.validate.field).string.max_len = 16];
}
message LoginResponse{
    string access_token=1;
    string refresh_token=2;
}
service AuthService{
    rpc Register(CreateUserRequest)returns(UserResponse){}
    rpc Login(LoginRequest)returns(LoginResponse){}
    rpc GetOneUser(GetOneUserRequest)returns(UserResponse){}
}